Cherry-pick 9b4ed7838982. rdar://problem/95534859

[JSC] Fix Temporal regulateTime's constraints for milliseconds, microseconds, and nanoseconds
    https://bugs.webkit.org/show_bug.cgi?id=241818
    rdar://95534859

    Reviewed by Ross Kirsling.

    This patch fixes constraints for milliseconds, microseconds, and nanoseconds in constrainTime.
    It should be from 0 to 999, not to 1000[1].

    [1]: https://tc39.es/proposal-temporal/#sec-temporal-constraintime

    * JSTests/stress/temporal-plaintime-tostring-1000-millisecond.js: Added.
    (shouldBe):
    (throw.new.Error):
    * Source/JavaScriptCore/runtime/TemporalPlainTime.cpp:
    (JSC::constrainTime):

    Canonical link: https://commits.webkit.org/251698@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295693 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.730@safari-613-branch